客户端网络完成

--- a/manifest.json
+++ b/manifest.json
@@ -6,18 +6,24 @@
 		"libs/modules/res/res.js",
 		"libs/modules/tween/tween.js",
 		"libs/modules/socket/socket.js",
-		"libs/modules/promise/promise.js"
+		"libs/modules/promise/promise.js",
+		"libs/protobuf/protobuf.js"
 	],
 	"game": [
-		"bin-debug/Main.js",
+		"bin-debug/Planet.js",
 		"bin-debug/AssetAdapter.js",
+		"bin-debug/DataCenter.js",
 		"bin-debug/FightObject.js",
 		"bin-debug/GameStateChecker.js",
 		"bin-debug/GlobalTool.js",
 		"bin-debug/LoadingUI.js",
+		"bin-debug/Main.js",
+		"bin-debug/Net.js",
 		"bin-debug/Country.js",
-		"bin-debug/Planet.js",
 		"bin-debug/PlanetControl.js",
+		"bin-debug/ProtoAll.js",
+		"bin-debug/ProtoType.js",
+		"bin-debug/Register.js",
 		"bin-debug/Ship.js",
 		"bin-debug/State.js",
 		"bin-debug/ThemeAdapter.js",
