--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,8 @@
 		"libs/protobuf/protobuf.js"
 	],
 	"game": [
+		"bin-debug/Country.js",
 		"bin-debug/Planet.js",
-		"bin-debug/AssetAdapter.js",
 		"bin-debug/DataCenter.js",
 		"bin-debug/FightObject.js",
 		"bin-debug/GameStateChecker.js",
@@ -19,11 +19,12 @@
 		"bin-debug/LoadingUI.js",
 		"bin-debug/Main.js",
 		"bin-debug/Net.js",
-		"bin-debug/Country.js",
+		"bin-debug/AssetAdapter.js",
 		"bin-debug/PlanetControl.js",
 		"bin-debug/ProtoCenter.js",
 		"bin-debug/ProtoType.js",
 		"bin-debug/Register.js",
+		"bin-debug/RoomScene.js",
 		"bin-debug/Ship.js",
 		"bin-debug/State.js",
 		"bin-debug/ThemeAdapter.js",
